# image-blurring

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  turbo.json
back/: __init__.py
back/api/: api.py
back/models/: __init__.py  job.py
back/worker/: __init__.py
front/app/: package-lock.json  package.json
front/app/src/lib/: Job.svelte  JobList.svelte  ModalCreateProcess.svelte
front/app/src/routes/: +page.svelte  +page.ts
front/app/src/types/: job.type.ts
front/app/tests/: test.ts
